# liblog_cc

./: .gitignore  MODULE.bazel  README.md
lib/: BUILD.bazel  liblogc.c
macros/: BUILD.bazel  logging.bzl  logging_ndebug.h
src/: BUILD.bazel
