load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name  = "logc",
    linkstatic = True,
    srcs  = ["liblogc.c"],
    hdrs = ["liblogc.h"],
    includes = ["."],
    copts =  [
        "-x", "c",
        "-O2"
    ] + select({
        "@platforms//os:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }),
    local_defines = ["LOG_USE_COLOR"],
    visibility = ["//visibility:public"]
)
